# ekko

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  glossary.rst  index.rst  installation.rst  manifest_structure.rst  usage.rst
ekko/: __init__.py  manifest.py
ekko/api/: __init__.py  app.py  config.py  expose.py
ekko/api/controllers/: base.py  root.py
ekko/api/controllers/v1/: __init__.py  images.py  versions.py
ekko/api/middleware/: __init__.py  auth_token.py  parsable_error.py
ekko/backup/: backend.py  backup.py
ekko/backup/_backend/: raw.py
ekko/cmd/: api.py
ekko/common/: config.py  exception.py  service.py
ekko/image/: drivers.py
ekko/image/_drivers/: raw.py
ekko/manifest/: driver.py  drivers.py  manifest.py  osdk.py  sqlite.py  structure.py
ekko/manifest/_drivers/: osdk.py  sqlite.py
ekko/manifest/drivers/: sqlite_driver.py
ekko/retention/drivers/: redis.py  redis_driver.py
ekko/storage/: compression_drivers.py  drivers.py  encryption_drivers.py
ekko/storage/_compression_drivers/: lzma_.py  noop.py  zlib_.py
ekko/storage/_drivers/: local.py
ekko/storage/_encryption_drivers/: noop.py
ekko/tests/: base.py  test_ekko.py
ekko/tests/unit/: conf_fixture.py
ekko/tests/unit/api/: base.py  (+1 more)
ekko/upload/: backend.py
ekko/upload/_backend/: local.py
tests/: test_noop.py
tools/: backup.py  dump_manifest.py  generate_manifest-lite.py  generate_manifest.py  osdk.py  print.py
(+1 files in other folders)
