[metadata]
name = ekko
summary = Block-based backups stored in object-storage
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
ekko.image.drivers =
    raw = ekko.image._drivers.raw:RawImage
ekko.manifest.drivers =
    osdk = ekko.manifest._drivers.osdk:OSDKManifest
    sqlite = ekko.manifest._drivers.sqlite:SQLiteManifest
ekko.storage.drivers =
    local = ekko.storage._drivers.local:LocalStorage

[files]
packages =
    ekko

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ekko/locale
domain = ekko

[update_catalog]
domain = ekko
output_dir = ekko/locale
input_file = ekko/locale/ekko.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ekko/locale/ekko.pot
